--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/entbappy/End-to-end-Machine-Learning-Project-with-MLflow.mlflow\"\n",
-    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"entbappy\"\n",
-    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"6824692c47a369aa6f9eac5b10041d5c8edbcef0\""
+    "os.environ[\"MLFLOW_TRACKING_URI\"]=\"https://dagshub.com/Elvisdomain/ml-end-to-end.mlflow\"\n",
+    "os.environ[\"MLFLOW_TRACKING_USERNAME\"]=\"Elvisdomain\"\n",
+    "os.environ[\"MLFLOW_TRACKING_PASSWORD\"]=\"94d4c1efdbacec73ff91d538f12c63ac4678f9a8\""
    ]
   },
   {
@@ -134,7 +134,7 @@
     "            all_params=params,\n",
     "            metric_file_name = config.metric_file_name,\n",
     "            target_column = schema.name,\n",
-    "            mlflow_uri=\"https://dagshub.com/entbappy/End-to-end-Machine-Learning-Project-with-MLflow.mlflow\",\n",
+    "            mlflow_uri=\"https://dagshub.com/Elvisdomain/ml-end-to-end.mlflow\",\n",
     "           \n",
     "        )\n",
     "\n",
